@@ -1,5 +1,5 @@
 /*
- * Copyright 2000-2016 JetBrains s.r.o.
+ * Copyright 2000-2017 JetBrains s.r.o.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -28,10 +28,7 @@ import com.intellij.execution.ExecutionException;
 import com.intellij.execution.ExecutionListener;
 import com.intellij.execution.ExecutionManager;
 import com.intellij.execution.configurations.GeneralCommandLine;
-import com.intellij.execution.process.OSProcessHandler;
-import com.intellij.execution.process.ProcessAdapter;
-import com.intellij.execution.process.ProcessEvent;
-import com.intellij.execution.process.ProcessHandler;
+import com.intellij.execution.process.*;
 import com.intellij.execution.runners.ExecutionEnvironment;
 import com.intellij.ide.DataManager;
 import com.intellij.ide.PowerSaveMode;
@@ -47,21 +44,16 @@ import com.intellij.openapi.compiler.CompilerTopics;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.editor.EditorFactory;
-import com.intellij.openapi.editor.event.DocumentAdapter;
 import com.intellij.openapi.editor.event.DocumentEvent;
+import com.intellij.openapi.editor.event.DocumentListener;
 import com.intellij.openapi.fileEditor.FileDocumentManager;
 import com.intellij.openapi.fileEditor.impl.FileDocumentManagerImpl;
 import com.intellij.openapi.fileTypes.impl.FileTypeManagerImpl;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleManager;
-import com.intellij.openapi.project.Project;
-import com.intellij.openapi.project.ProjectManager;
-import com.intellij.openapi.project.ProjectManagerAdapter;
-import com.intellij.openapi.project.ProjectUtil;
-import com.intellij.openapi.projectRoots.JavaSdk;
-import com.intellij.openapi.projectRoots.JavaSdkType;
-import com.intellij.openapi.projectRoots.JavaSdkVersion;
-import com.intellij.openapi.projectRoots.Sdk;
+import com.intellij.openapi.project.*;
+import com.intellij.openapi.projectRoots.*;
+import com.intellij.openapi.projectRoots.ex.JavaSdkUtil;
 import com.intellij.openapi.projectRoots.impl.JavaAwareProjectJdkTableImpl;
 import com.intellij.openapi.roots.*;
 import com.intellij.openapi.startup.StartupManager;
@@ -81,6 +73,8 @@ import com.intellij.util.*;
 import com.intellij.util.concurrency.SequentialTaskExecutor;
 import com.intellij.util.containers.IntArrayList;
 import com.intellij.util.io.BaseOutputReader;
+import com.intellij.util.io.NettyKt;
+import com.intellij.util.io.PathKt;
 import com.intellij.util.io.storage.HeavyProcessLatch;
 import com.intellij.util.messages.MessageBusConnection;
 import com.intellij.util.net.NetUtils;
@@ -90,7 +84,6 @@ import io.netty.bootstrap.ServerBootstrap;
 import io.netty.channel.Channel;
 import io.netty.channel.ChannelInitializer;
 import io.netty.channel.EventLoopGroup;
-import io.netty.channel.nio.NioEventLoopGroup;
 import io.netty.channel.oio.OioEventLoopGroup;
 import io.netty.handler.codec.protobuf.ProtobufDecoder;
 import io.netty.handler.codec.protobuf.ProtobufEncoder;
@@ -116,6 +109,8 @@ import java.io.IOException;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.List;
@@ -124,7 +119,7 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static com.intellij.util.io.NettyKt.serverBootstrap;
+import static com.intellij.util.io.NettyKt.MultiThreadEventLoopGroup;
 import static org.jetbrains.jps.api.CmdlineRemoteProto.Message.ControllerMessage.ParametersMessage.TargetTypeBuildScope;
 
 /**
@@ -152,7 +147,7 @@ public class BuildManager implements Disposable {
     s -> !(s.contains(IDEA_PROJECT_DIR_PATTERN) || s.endsWith(IWS_EXTENSION) || s.endsWith(IPR_EXTENSION)) :
     s -> !(StringUtil.endsWithIgnoreCase(s, IWS_EXTENSION) || StringUtil.endsWithIgnoreCase(s, IPR_EXTENSION) || StringUtil.containsIgnoreCase(s, IDEA_PROJECT_DIR_PATTERN));
 
-  private final File mySystemDirectory;
+  private final List<String> myFallbackJdkParams = new SmartList<>();
   private final ProjectManager myProjectManager;
 
   private final Map<TaskFuture, Project> myAutomakeFutures = Collections.synchronizedMap(new HashMap<TaskFuture, Project>());
@@ -162,8 +157,9 @@ public class BuildManager implements Disposable {
   private final BuildProcessClasspathManager myClasspathManager = new BuildProcessClasspathManager();
   private final ExecutorService myRequestsProcessor = SequentialTaskExecutor.createSequentialApplicationPoolExecutor("BuildManager requestProcessor pool");
   private final Map<String, ProjectData> myProjectDataMap = Collections.synchronizedMap(new HashMap<String, ProjectData>());
+  private volatile int myFileChangeCounter;
 
-  private final BuildManagerPeriodicTask myAutoMakeTask = new BuildManagerPeriodicTask(this) {
+  private final BuildManagerPeriodicTask myAutoMakeTask = new BuildManagerPeriodicTask() {
     @Override
     protected int getDelay() {
       return Registry.intValue("compiler.automake.trigger.delay");
@@ -175,7 +171,7 @@ public class BuildManager implements Disposable {
     }
   };
 
-  private final BuildManagerPeriodicTask myDocumentSaveTask = new BuildManagerPeriodicTask(this) {
+  private final BuildManagerPeriodicTask myDocumentSaveTask = new BuildManagerPeriodicTask() {
     @Override
     protected int getDelay() {
       return Registry.intValue("compiler.document.save.trigger.delay");
@@ -201,19 +197,26 @@ public class BuildManager implements Disposable {
     if (unusedThresholdDays <= 0) {
       return;
     }
-    final File buildSystemDir = getBuildSystemDirectory();
-    final File[] dirs = buildSystemDir.listFiles(pathname -> pathname.isDirectory() && !TEMP_DIR_NAME.equals(pathname.getName()));
+    final Path buildSystemDir = getBuildSystemDirectory();
+    final List<Path> dirs;
+    try {
+      dirs = Files.list(buildSystemDir).filter(pathname -> Files.isDirectory(pathname) && !TEMP_DIR_NAME.equals(pathname.getFileName().toString())).collect(Collectors.toList());
+    }
+    catch (IOException e) {
+      return;
+    }
+
     if (dirs != null) {
       final Date now = new Date();
-      for (File buildDataProjectDir : dirs) {
-        final File usageFile = getUsageFile(buildDataProjectDir);
-        if (usageFile.exists()) {
+      for (Path buildDataProjectDir : dirs) {
+        final Path usageFile = getUsageFile(buildDataProjectDir);
+        if (Files.exists(usageFile)) {
           final Pair<Date, File> usageData = readUsageFile(usageFile);
           if (usageData != null) {
             final File projectFile = usageData.second;
             if (projectFile != null && !projectFile.exists() || DateFormatUtil.getDifferenceInDays(usageData.first, now) > unusedThresholdDays) {
-              LOG.info("Clearing project build data because the project does not exist or was not opened for more than " + unusedThresholdDays + " days: " + buildDataProjectDir.getPath());
-              FileUtil.delete(buildDataProjectDir);
+              LOG.info("Clearing project build data because the project does not exist or was not opened for more than " + unusedThresholdDays + " days: " + buildDataProjectDir);
+              PathKt.delete(buildDataProjectDir);
             }
           }
         }
@@ -236,20 +239,16 @@ public class BuildManager implements Disposable {
     final Application application = ApplicationManager.getApplication();
     IS_UNIT_TEST_MODE = application.isUnitTestMode();
     myProjectManager = projectManager;
-    final String systemPath = PathManager.getSystemPath();
-    File system = new File(systemPath);
-    try {
-      system = system.getCanonicalFile();
-    }
-    catch (IOException e) {
-      LOG.info(e);
-    }
-    mySystemDirectory = system;
 
-    projectManager.addProjectManagerListener(new ProjectWatcher());
+    final String fallbackSdkHome = getFallbackSdkHome();
+    if (fallbackSdkHome != null) {
+      myFallbackJdkParams.add("-D" + GlobalOptions.FALLBACK_JDK_HOME + "=" + fallbackSdkHome);
+      myFallbackJdkParams.add("-D" + GlobalOptions.FALLBACK_JDK_VERSION + "=" + SystemProperties.getJavaVersion());
+    }
 
-    final MessageBusConnection conn = application.getMessageBus().connect();
-    conn.subscribe(VirtualFileManager.VFS_CHANGES, new BulkFileListener.Adapter() {
+    MessageBusConnection connection = application.getMessageBus().connect();
+    connection.subscribe(ProjectManager.TOPIC, new ProjectWatcher());
+    connection.subscribe(VirtualFileManager.VFS_CHANGES, new BulkFileListener() {
       @Override
       public void after(@NotNull List<? extends VFileEvent> events) {
         if (!IS_UNIT_TEST_MODE && shouldTriggerMake(events)) {
@@ -296,14 +295,20 @@ public class BuildManager implements Disposable {
 
     });
 
-    conn.subscribe(BatchFileChangeListener.TOPIC, new BatchFileChangeListener.Adapter() {
+    connection.subscribe(BatchFileChangeListener.TOPIC, new BatchFileChangeListener.Adapter() {
       @Override
       public void batchChangeStarted(Project project) {
+        myFileChangeCounter++;
         cancelAutoMakeTasks(project);
+      }
+
+      @Override
+      public void batchChangeCompleted(Project project) {
+        myFileChangeCounter--;
       }
     });
 
-    EditorFactory.getInstance().getEventMulticaster().addDocumentListener(new DocumentAdapter() {
+    EditorFactory.getInstance().getEventMulticaster().addDocumentListener(new DocumentListener() {
       @Override
       public void documentChanged(DocumentEvent e) {
         final Document document = e.getDocument();
@@ -320,6 +325,20 @@ public class BuildManager implements Disposable {
 
     ScheduledFuture<?> future = JobScheduler.getScheduler().scheduleWithFixedDelay(() -> runCommand(myGCTask), 3, 180, TimeUnit.MINUTES);
     Disposer.register(this, () -> future.cancel(false));
+  }
+
+  @Nullable
+  private static String getFallbackSdkHome() {
+    String home = SystemProperties.getJavaHome(); // should point either to jre or jdk
+    if (home == null) return null;
+
+    if (!JdkUtil.checkForJdk(home)) {
+      String parent = new File(home).getParent();
+      if (parent != null && JdkUtil.checkForJdk(parent)) {
+        home = parent;
+      }
+    }
+    return FileUtil.toSystemIndependentName(home);
   }
 
   private List<Project> getOpenProjects() {
@@ -469,12 +488,29 @@ public class BuildManager implements Disposable {
 
   public void scheduleAutoMake() {
     if (!IS_UNIT_TEST_MODE && !PowerSaveMode.isEnabled()) {
+      if (LOG.isDebugEnabled()) {
+        LOG.debug("Automake scheduled:\n" + getThreadTrace(Thread.currentThread(), 10));
+      }
       myAutoMakeTask.schedule();
     }
   }
 
+  @NotNull
+  private static String getThreadTrace(Thread thread, final int depth) { // debugging
+    final StringBuilder buf = new StringBuilder();
+    final StackTraceElement[] trace = thread.getStackTrace();
+    for (int i = 0; i < depth && i < trace.length; i++) {
+      final StackTraceElement element = trace[i];
+      buf.append("\tat ").append(element).append("\n");
+    }
+    return buf.toString();
+  }
+
   private void scheduleProjectSave() {
     if (!IS_UNIT_TEST_MODE && !PowerSaveMode.isEnabled()) {
+      if (LOG.isDebugEnabled()) {
+        LOG.debug("Automake canceled; reason: project save scheduled");
+      }
       myAutoMakeTask.cancelPendingExecution();
       myDocumentSaveTask.schedule();
     }
@@ -512,10 +548,7 @@ public class BuildManager implements Disposable {
     if (!config.MAKE_PROJECT_ON_SAVE) {
       return false;
     }
-    if (!config.allowAutoMakeWhileRunningApplication() && hasRunningProcess(project)) {
-      return false;
-    }
-    return true;
+    return config.allowAutoMakeWhileRunningApplication() || !hasRunningProcess(project);
   }
 
   @Nullable
@@ -579,6 +612,9 @@ public class BuildManager implements Disposable {
           futures.add(future);
         }
       }
+    }
+    if (LOG.isDebugEnabled() && !futures.isEmpty()) {
+      LOG.debug("Automake cancel (all tasks):\n" + getThreadTrace(Thread.currentThread(), 10));
     }
     return futures;
   }
@@ -678,7 +714,7 @@ public class BuildManager implements Disposable {
       if (!usingPreloadedProcess && (future.isCancelled() || project.isDisposed())) {
         // in case of preloaded process the process was already running, so the handler will be notified upon process termination
         handler.sessionTerminated(sessionId);
-        ((BasicFuture)future).setDone();
+        future.setDone();
       }
       else {
         final CmdlineRemoteProto.Message.ControllerMessage.GlobalSettings globals =
@@ -868,12 +904,8 @@ public class BuildManager implements Disposable {
   @NotNull
   private ProjectData getProjectData(String projectPath) {
     synchronized (myProjectDataMap) {
-      ProjectData data = myProjectDataMap.get(projectPath);
-      if (data == null) {
-        data = new ProjectData(SequentialTaskExecutor.createSequentialApplicationPoolExecutor("BuildManager pool"));
-        myProjectDataMap.put(projectPath, data);
-      }
-      return data;
+      return myProjectDataMap.computeIfAbsent(projectPath, k -> new ProjectData(
+        SequentialTaskExecutor.createSequentialApplicationPoolExecutor("BuildManager pool")));
     }
   }
 
@@ -944,7 +976,7 @@ public class BuildManager implements Disposable {
       }
     }
 
-    if (projectJdk == null || sdkVersion == null || !sdkVersion.isAtLeast(oldestPossibleVersion)) {
+    if (projectJdk == null || !sdkVersion.isAtLeast(oldestPossibleVersion)) {
       final Sdk internalJdk = JavaAwareProjectJdkTableImpl.getInstanceEx().getInternalJdk();
       projectJdk = internalJdk;
       sdkVersion = javaSdkType.getVersion(internalJdk);
@@ -957,7 +989,7 @@ public class BuildManager implements Disposable {
     JavaSdkVersion version = javaSdkType.getVersion(vs);
     if (version == null) {
       // Unexpected version string: e.g. early access or experimental JDK build
-      // trying to find the 'known' sdk version that would best describe the passed version string  
+      // trying to find the 'known' sdk version that would best describe the passed version string
       final int parsed = JpsJavaSdkType.parseVersion(vs);
       if (parsed > 0) {
         version = javaSdkType.getVersion(parsed + ".0");
@@ -994,8 +1026,8 @@ public class BuildManager implements Disposable {
     });
   }
 
-  private OSProcessHandler launchBuildProcess(Project project, final int port, final UUID sessionId, boolean requestProjectPreload) throws ExecutionException {
-    final String compilerPath;
+  private OSProcessHandler launchBuildProcess(@NotNull Project project, final int port, final UUID sessionId, boolean requestProjectPreload) throws ExecutionException {
+    String compilerPath;
     final String vmExecutablePath;
     JavaSdkVersion sdkVersion = null;
 
@@ -1015,13 +1047,25 @@ public class BuildManager implements Disposable {
         // this is the most universal way to obtain tools.jar path in this particular case
         final JavaCompiler systemCompiler = ToolProvider.getSystemJavaCompiler();
         if (systemCompiler == null) {
-          throw new ExecutionException("No system java compiler is provided by the JRE. Make sure tools.jar is present in IntelliJ IDEA classpath.");
+          //temporary workaround for IDEA-169747
+          try {
+            compilerPath = ClasspathBootstrap.getResourcePath(Class.forName("com.sun.tools.javac.api.JavacTool", false, BuildManager.class.getClassLoader()));
+          }
+          catch (Throwable t) {
+            LOG.info(t);
+            compilerPath = null;
+          }
+          if (compilerPath == null) {
+            throw new ExecutionException("No system java compiler is provided by the JRE. Make sure tools.jar is present in IntelliJ IDEA classpath.");
+          }
         }
-        compilerPath = ClasspathBootstrap.getResourcePath(systemCompiler.getClass());
+        else {
+          compilerPath = ClasspathBootstrap.getResourcePath(systemCompiler.getClass());
+        }
       }
       else {
         compilerPath = projectJdkType.getToolsPath(projectJdk);
-        if (compilerPath == null) {
+        if (compilerPath == null && !JavaSdkUtil.isJdkAtLeast(projectJdk, JavaSdkVersion.JDK_1_9)) {
           throw new ExecutionException("Cannot determine path to 'tools.jar' library for " + projectJdk.getName() + " (" + projectJdk.getHomePath() + ")");
         }
       }
@@ -1092,6 +1136,10 @@ public class BuildManager implements Disposable {
       cmdLine.addParameter("-Dpreload.config.path=" + FileUtil.toCanonicalPath(PathManager.getOptionsPath()));
     }
 
+    if (ProjectUtilCore.isExternalStorageEnabled(project)) {
+      cmdLine.addParameter("-D" + GlobalOptions.EXTERNAL_PROJECT_CONFIG + "=" + ProjectUtil.getExternalConfigurationDir(project));
+    }
+
     final String shouldGenerateIndex = System.getProperty(GlobalOptions.GENERATE_CLASSPATH_INDEX_OPTION);
     if (shouldGenerateIndex != null) {
       cmdLine.addParameter("-D"+ GlobalOptions.GENERATE_CLASSPATH_INDEX_OPTION +"=" + shouldGenerateIndex);
@@ -1151,28 +1199,26 @@ public class BuildManager implements Disposable {
     cmdLine.addParameter("-D" + PathManager.PROPERTY_PLUGINS_PATH + "=" + PathManager.getPluginsPath());
 
     cmdLine.addParameter("-D" + GlobalOptions.LOG_DIR_OPTION + "=" + FileUtil.toSystemIndependentName(getBuildLogDirectory().getAbsolutePath()));
-    cmdLine.addParameter("-D" + GlobalOptions.FALLBACK_JDK_HOME + "=" + FileUtil.toSystemIndependentName(SystemProperties.getJavaHome()));
-    cmdLine.addParameter("-D" + GlobalOptions.FALLBACK_JDK_VERSION + "=" + SystemProperties.getJavaVersion());
+    cmdLine.addParameters(myFallbackJdkParams);
 
-    final File workDirectory = getBuildSystemDirectory();
-    //noinspection ResultOfMethodCallIgnored
-    workDirectory.mkdirs();
-    cmdLine.addParameter("-Djava.io.tmpdir=" + FileUtil.toSystemIndependentName(workDirectory.getPath()) + "/" + TEMP_DIR_NAME);
+    cmdLine.addParameter("-Dio.netty.noUnsafe=true");
+
+    final Path workDirectory = getBuildSystemDirectory();
+    try {
+      Files.createDirectories(workDirectory);
+    }
+    catch (IOException e) {
+      LOG.warn(e);
+    }
+
+    final File projectSystemRoot = getProjectSystemDirectory(project);
+    if (projectSystemRoot != null) {
+      cmdLine.addParameter("-Djava.io.tmpdir=" + FileUtil.toSystemIndependentName(projectSystemRoot.getPath()) + "/" + TEMP_DIR_NAME);
+    }
 
     for (BuildProcessParametersProvider provider : project.getExtensions(BuildProcessParametersProvider.EP_NAME)) {
       final List<String> args = provider.getVMArguments();
       cmdLine.addParameters(args);
-    }
-
-    //TODO[Dmitry Batkovich] should be replaced with the proper solution
-    if (sdkVersion != null && sdkVersion.isAtLeast(JavaSdkVersion.JDK_1_9)) {
-      cmdLine.addParameters("--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED");
-      cmdLine.addParameters("--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED");
-      cmdLine.addParameters("--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED");
-      cmdLine.addParameters("--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED");
-      cmdLine.addParameters("--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED");
-      cmdLine.addParameters("--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED");
-      cmdLine.addParameters("--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED");
     }
 
     @SuppressWarnings("UnnecessaryFullyQualifiedName")
@@ -1181,17 +1227,19 @@ public class BuildManager implements Disposable {
     final List<String> launcherCp = new ArrayList<>();
     launcherCp.add(ClasspathBootstrap.getResourcePath(launcherClass));
     launcherCp.addAll(BuildProcessClasspathManager.getLauncherClasspath(project));
-    launcherCp.add(compilerPath);
+    if (compilerPath != null) {   // can be null in case of jdk9
+      launcherCp.add(compilerPath);
+    }
     ClasspathBootstrap.appendJavaCompilerClasspath(launcherCp, shouldIncludeEclipseCompiler(projectConfig));
     cmdLine.addParameter("-classpath");
     cmdLine.addParameter(classpathToString(launcherCp));
-                                   
+
     cmdLine.addParameter(launcherClass.getName());
 
     final List<String> cp = ClasspathBootstrap.getBuildProcessApplicationClasspath();
     cp.addAll(myClasspathManager.getBuildProcessPluginsClasspath(project));
     if (isProfilingMode) {
-      cp.add(new File(workDirectory, "yjp-controller-api-redist.jar").getPath());
+      cp.add(workDirectory.resolve("yjp-controller-api-redist.jar").toString());
     }
     cmdLine.addParameter(classpathToString(cp));
 
@@ -1200,9 +1248,9 @@ public class BuildManager implements Disposable {
     cmdLine.addParameter(Integer.toString(port));
     cmdLine.addParameter(sessionId.toString());
 
-    cmdLine.addParameter(FileUtil.toSystemIndependentName(workDirectory.getPath()));
+    cmdLine.addParameter(PathKt.getSystemIndependentPath(workDirectory));
 
-    cmdLine.setWorkDirectory(workDirectory);
+    cmdLine.setWorkDirectory(workDirectory.toFile());
 
     try {
       ApplicationManager.getApplication().getMessageBus().syncPublisher(BuildManagerListener.TOPIC).beforeBuildProcessStarted(project, sessionId);
@@ -1229,7 +1277,14 @@ public class BuildManager implements Disposable {
         // re-translate builder's output to idea.log
         final String text = event.getText();
         if (!StringUtil.isEmptyOrSpaces(text)) {
-          LOG.info("BUILDER_PROCESS [" + outputType.toString() + "]: " + text.trim());
+          if (ProcessOutputTypes.SYSTEM.equals(outputType)) {
+            if (LOG.isDebugEnabled()) {
+              LOG.debug("BUILDER_PROCESS [" + outputType + "]: " + text.trim());
+            }
+          }
+          else {
+            LOG.info("BUILDER_PROCESS [" + outputType + "]: " + text.trim());
+          }
         }
       }
     });
@@ -1240,7 +1295,7 @@ public class BuildManager implements Disposable {
     return processHandler;
   }
 
-  private boolean shouldIncludeEclipseCompiler(CompilerConfiguration config) {
+  private static boolean shouldIncludeEclipseCompiler(CompilerConfiguration config) {
     if (config instanceof CompilerConfigurationImpl) {
       final BackendCompiler javaCompiler = ((CompilerConfigurationImpl)config).getDefaultCompiler();
       final String compilerId = javaCompiler != null? javaCompiler.getId() : null;
@@ -1249,8 +1304,9 @@ public class BuildManager implements Disposable {
     return true;
   }
 
-  public File getBuildSystemDirectory() {
-    return new File(mySystemDirectory, SYSTEM_ROOT);
+  @NotNull
+  public Path getBuildSystemDirectory() {
+    return PathManagerEx.getAppSystemDir().resolve(SYSTEM_ROOT);
   }
 
   public File getBuildLogDirectory() {
@@ -1260,15 +1316,16 @@ public class BuildManager implements Disposable {
   @Nullable
   public File getProjectSystemDirectory(Project project) {
     final String projectPath = getProjectPath(project);
-    return projectPath != null? Utils.getDataStorageRoot(getBuildSystemDirectory(), projectPath) : null;
+    return projectPath != null ? Utils.getDataStorageRoot(getBuildSystemDirectory().toFile(), projectPath) : null;
   }
 
-  private static File getUsageFile(@NotNull File projectSystemDir) {
-    return new File(projectSystemDir, "ustamp");
+  @NotNull
+  private static Path getUsageFile(@NotNull Path projectSystemDir) {
+    return projectSystemDir.resolve("ustamp");
   }
 
-  private static void updateUsageFile(@Nullable Project project, @NotNull File projectSystemDir) {
-    final File usageFile = getUsageFile(projectSystemDir);
+  private static void updateUsageFile(@Nullable Project project, @NotNull Path projectSystemDir) {
+    final Path usageFile = getUsageFile(projectSystemDir);
     StringBuilder content = new StringBuilder();
     try {
       synchronized (USAGE_STAMP_DATE_FORMAT) {
@@ -1280,7 +1337,7 @@ public class BuildManager implements Disposable {
           content.append("\n").append(FileUtil.toCanonicalPath(projectFilePath));
         }
       }
-      FileUtil.writeToFile(usageFile, content.toString());
+      PathKt.write(usageFile, content.toString());
     }
     catch (Throwable e) {
       LOG.info(e);
@@ -1288,9 +1345,9 @@ public class BuildManager implements Disposable {
   }
 
   @Nullable
-  private static Pair<Date, File> readUsageFile(File usageFile) {
+  private static Pair<Date, File> readUsageFile(@NotNull Path usageFile) {
     try {
-      final List<String> lines = FileUtil.loadLines(usageFile, CharsetToolkit.UTF8_CHARSET.name());
+      final List<String> lines = Files.readAllLines(usageFile);
       if (!lines.isEmpty()) {
         final String dateString = lines.get(0);
         final Date date;
@@ -1337,16 +1394,12 @@ public class BuildManager implements Disposable {
   }
 
   private int startListening() throws Exception {
-    EventLoopGroup group;
     BuiltInServer mainServer = StartupUtil.getServer();
     boolean isOwnEventLoopGroup = !Registry.is("compiler.shared.event.group", true) || mainServer == null || mainServer.getEventLoopGroup() instanceof OioEventLoopGroup;
-    if (isOwnEventLoopGroup) {
-      group = new NioEventLoopGroup(1, ConcurrencyUtil.newNamedThreadFactory("External compiler"));
-    }
-    else {
-      group = mainServer.getEventLoopGroup();
-    }
-    final ServerBootstrap bootstrap = serverBootstrap(group);
+    EventLoopGroup group = isOwnEventLoopGroup
+                           ? MultiThreadEventLoopGroup(1, ConcurrencyUtil.newNamedThreadFactory("External compiler"))
+                           : mainServer.getEventLoopGroup();
+    final ServerBootstrap bootstrap = NettyKt.serverBootstrap(group);
     bootstrap.childHandler(new ChannelInitializer() {
       @Override
       protected void initChannel(@NotNull Channel channel) throws Exception {
@@ -1385,7 +1438,7 @@ public class BuildManager implements Disposable {
     }
   }
 
-  private abstract static class BuildManagerPeriodicTask implements Runnable {
+  private abstract class BuildManagerPeriodicTask implements Runnable {
     private final Alarm myAlarm;
     private final AtomicBoolean myInProgress = new AtomicBoolean(false);
     private final Runnable myTaskRunnable = () -> {
@@ -1397,17 +1450,17 @@ public class BuildManager implements Disposable {
       }
     };
 
-    protected BuildManagerPeriodicTask(@NotNull Disposable disposable) {
-      myAlarm = new Alarm(Alarm.ThreadToUse.POOLED_THREAD, disposable);
+    BuildManagerPeriodicTask() {
+      myAlarm = new Alarm(Alarm.ThreadToUse.POOLED_THREAD, BuildManager.this);
     }
 
-    public final void schedule() {
+    final void schedule() {
       cancelPendingExecution();
       final int delay = Math.max(100, getDelay());
       myAlarm.addRequest(this, delay);
     }
 
-    public void cancelPendingExecution() {
+    void cancelPendingExecution() {
       myAlarm.cancelAllRequests();
     }
 
@@ -1417,7 +1470,7 @@ public class BuildManager implements Disposable {
 
     @Override
     public final void run() {
-      if (!HeavyProcessLatch.INSTANCE.isRunning() && !myInProgress.getAndSet(true)) {
+      if (!HeavyProcessLatch.INSTANCE.isRunning() && myFileChangeCounter <= 0 && !myInProgress.getAndSet(true)) {
         try {
           ApplicationManager.getApplication().executeOnPooledThread(myTaskRunnable);
         }
@@ -1441,7 +1494,7 @@ public class BuildManager implements Disposable {
     private final BuilderMessageHandler myDelegateHandler;
     private final boolean myIsAutomake;
 
-    public NotifyingMessageHandler(@NotNull Project project, @NotNull BuilderMessageHandler delegateHandler, final boolean isAutomake) {
+    NotifyingMessageHandler(@NotNull Project project, @NotNull BuilderMessageHandler delegateHandler, final boolean isAutomake) {
       myProject = project;
       myDelegateHandler = delegateHandler;
       myIsAutomake = isAutomake;
@@ -1510,7 +1563,7 @@ public class BuildManager implements Disposable {
     }
   }
 
-  private class ProjectWatcher extends ProjectManagerAdapter {
+  private class ProjectWatcher implements ProjectManagerListener {
     private final Map<Project, MessageBusConnection> myConnections = new HashMap<>();
 
     @Override
@@ -1529,10 +1582,24 @@ public class BuildManager implements Disposable {
       });
       conn.subscribe(ExecutionManager.EXECUTION_TOPIC, new ExecutionListener() {
         @Override
-        public void processTerminated(@NotNull String executorId,
-                                      @NotNull ExecutionEnvironment env,
-                                      @NotNull ProcessHandler handler,
-                                      int exitCode) {
+        public void processStarting(@NotNull String executorId, @NotNull ExecutionEnvironment env) {
+          cancelAutoMakeTasks(env.getProject()); // make sure to cancel all automakes waiting in the build queue
+        }
+
+        @Override
+        public void processStarted(@NotNull String executorId, @NotNull ExecutionEnvironment env, @NotNull ProcessHandler handler) {
+          // make sure to cancel all automakes added to the build queue after processStaring and before this event
+          cancelAutoMakeTasks(env.getProject());
+        }
+
+        @Override
+        public void processNotStarted(@NotNull String executorId, @NotNull ExecutionEnvironment env) {
+          // augmenting reaction to processTerminated(): in case any automakes were canceled before process start
+          scheduleAutoMake();
+        }
+
+        @Override
+        public void processTerminated(@NotNull String executorId, @NotNull ExecutionEnvironment env, @NotNull ProcessHandler handler, int exitCode) {
           scheduleAutoMake();
         }
       });
@@ -1591,12 +1658,10 @@ public class BuildManager implements Disposable {
                 if (project.isDisposed()) {
                   return Collections.emptySet();
                 }
-                else {
-                  return candidates.stream()
-                    .map(lfs::findFileByPath)
-                    .filter(root -> root != null && fileIndex.isInSourceContent(root))
-                    .collect(Collectors.toSet());
-                }
+                return candidates.stream()
+                  .map(lfs::findFileByPath)
+                  .filter(root -> root != null && fileIndex.isInSourceContent(root))
+                  .collect(Collectors.toSet());
               });
 
               if (!toRefresh.isEmpty()) {
@@ -1614,18 +1679,15 @@ public class BuildManager implements Disposable {
         }
       });
       final String projectPath = getProjectPath(project);
-      Disposer.register(project, new Disposable() {
-        @Override
-        public void dispose() {
-          cancelPreloadedBuilds(projectPath);
-          myProjectDataMap.remove(projectPath);
-        }
+      Disposer.register(project, () -> {
+        cancelPreloadedBuilds(projectPath);
+        myProjectDataMap.remove(projectPath);
       });
       StartupManager.getInstance(project).registerPostStartupActivity(() -> {
         runCommand(() -> {
           final File projectSystemDir = getProjectSystemDirectory(project);
           if (projectSystemDir != null) {
-            updateUsageFile(project, projectSystemDir);
+            updateUsageFile(project, projectSystemDir.toPath());
           }
         });
         scheduleAutoMake(); // run automake after project opened
@@ -1633,9 +1695,8 @@ public class BuildManager implements Disposable {
     }
 
     @Override
-    public boolean canCloseProject(Project project) {
+    public void projectClosingBeforeSave(@NotNull Project project) {
       cancelAutoMakeTasks(project);
-      return super.canCloseProject(project);
     }
 
     @Override
@@ -1668,7 +1729,7 @@ public class BuildManager implements Disposable {
       this.taskQueue = taskQueue;
     }
 
-    public void addChanged(Collection<String> paths) {
+    void addChanged(Collection<String> paths) {
       if (!myNeedRescan) {
         for (String path : paths) {
           final InternedPath _path = InternedPath.create(path);
@@ -1678,7 +1739,7 @@ public class BuildManager implements Disposable {
       }
     }
 
-    public void addDeleted(Collection<String> paths) {
+    void addDeleted(Collection<String> paths) {
       if (!myNeedRescan) {
         for (String path : paths) {
           final InternedPath _path = InternedPath.create(path);
@@ -1688,7 +1749,7 @@ public class BuildManager implements Disposable {
       }
     }
 
-    public CmdlineRemoteProto.Message.ControllerMessage.FSEvent createNextEvent() {
+    CmdlineRemoteProto.Message.ControllerMessage.FSEvent createNextEvent() {
       final CmdlineRemoteProto.Message.ControllerMessage.FSEvent.Builder builder =
         CmdlineRemoteProto.Message.ControllerMessage.FSEvent.newBuilder();
       builder.setOrdinal(++myNextEventOrdinal);
@@ -1706,13 +1767,16 @@ public class BuildManager implements Disposable {
       return builder.build();
     }
 
-    public boolean getAndResetRescanFlag() {
+    boolean getAndResetRescanFlag() {
       final boolean rescan = myNeedRescan;
       myNeedRescan = false;
       return rescan;
     }
 
-    public void dropChanges() {
+    void dropChanges() {
+      if (LOG.isDebugEnabled()) {
+        LOG.debug("Project build state cleared: " + getThreadTrace(Thread.currentThread(), 20));
+      }
       myNeedRescan = true;
       myNextEventOrdinal = 0L;
       myChanged.clear();
@@ -1726,7 +1790,7 @@ public class BuildManager implements Disposable {
     /**
      * @param path assuming system-independent path with forward slashes
      */
-    protected InternedPath(String path) {
+    InternedPath(String path) {
       final IntArrayList list = new IntArrayList();
       final StringTokenizer tokenizer = new StringTokenizer(path, "/", false);
       while(tokenizer.hasMoreTokens()) {
@@ -1745,9 +1809,7 @@ public class BuildManager implements Disposable {
 
       InternedPath path = (InternedPath)o;
 
-      if (!Arrays.equals(myPath, path.myPath)) return false;
-
-      return true;
+      return Arrays.equals(myPath, path.myPath);
     }
 
     @Override
