@@ -1,5 +1,5 @@
 /*
- * Copyright 2000-2014 JetBrains s.r.o.
+ * Copyright 2000-2017 JetBrains s.r.o.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -43,7 +43,10 @@ import org.intellij.plugins.intelliLang.util.ContextComputationProcessor;
 import org.intellij.plugins.intelliLang.util.PsiUtilEx;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
 
 /**
  * @author cdr
@@ -137,10 +140,10 @@ public class ConcatenationInjector implements ConcatenationAwareInjector {
       final LocalSearchScope searchScope = new LocalSearchScope(new PsiElement[]{topBlock instanceof PsiCodeBlock
                                                                                  ? topBlock : firstOperand.getContainingFile()}, "", true);
       final THashSet<PsiModifierListOwner> visitedVars = new THashSet<>();
-      final LinkedList<PsiElement> places = new LinkedList<>();
+      final ArrayList<PsiElement> places = new ArrayList<>(5);
       places.add(firstOperand);
       class MyAnnoVisitor implements AnnotationUtilEx.AnnotatedElementVisitor {
-        public boolean visitMethodParameter(PsiExpression expression, PsiCallExpression psiCallExpression) {
+        public boolean visitMethodParameter(PsiExpression expression, PsiCall psiCallExpression) {
           final PsiExpressionList list = psiCallExpression.getArgumentList();
           assert list != null;
           final int index = ArrayUtil.indexOf(list.getExpressions(), expression);
@@ -160,14 +163,23 @@ public class ConcatenationInjector implements ConcatenationAwareInjector {
             final PsiJavaCodeReferenceElement classRef = ((PsiNewExpression)psiCallExpression).getClassOrAnonymousClassReference();
             methodName = classRef == null ? null : classRef.getReferenceName();
           }
+          else if (psiCallExpression instanceof PsiEnumConstant) {
+            PsiMethod method = psiCallExpression.resolveMethod();
+            methodName = method != null ? method.getName() : null;
+          }
           else {
             methodName = null;
           }
-          if (methodName != null && areThereInjectionsWithName(methodName, false)) {
+          if (methodName != null && index >= 0 && areThereInjectionsWithName(methodName, false)) {
             final PsiMethod method = psiCallExpression.resolveMethod();
-            final PsiParameter[] parameters = method == null ? PsiParameter.EMPTY_ARRAY : method.getParameterList().getParameters();
-            if (index >= 0 && index < parameters.length && method != null) {
-              process(parameters[index], method, index);
+            if (method != null) {
+              final PsiParameter[] parameters = method.getParameterList().getParameters();
+              if (index < parameters.length) {
+                process(parameters[index], method, index);
+              }
+              else if (method.isVarArgs()) {
+                process(parameters[parameters.length - 1], method, parameters.length - 1);
+              }
             }
           }
           return false;
@@ -262,7 +274,7 @@ public class ConcatenationInjector implements ConcatenationAwareInjector {
         return;
       }
       while (!places.isEmpty() && !myShouldStop) {
-        final PsiElement curPlace = places.removeFirst();
+        final PsiElement curPlace = places.remove(0);
         AnnotationUtilEx.visitAnnotatedElements(curPlace, visitor);
       }
     }
@@ -413,7 +425,9 @@ public class ConcatenationInjector implements ConcatenationAwareInjector {
         return true;
       }
     }
-    else if (parent instanceof PsiPolyadicExpression) {
+    else if (parent instanceof PsiPolyadicExpression || 
+             parent instanceof PsiParenthesizedExpression ||
+             parent instanceof PsiConditionalExpression) {
       return true;
     }
     return false;
