@@ -1,5 +1,5 @@
 /*
- * Copyright 2000-2016 JetBrains s.r.o.
+ * Copyright 2000-2017 JetBrains s.r.o.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -33,17 +33,17 @@ import java.util.*;
 import java.util.Map.Entry;
 
 public class ConstExprent extends Exprent {
-  private static final Map<Integer, String> ESCAPES;
+  private static final Map<Integer, String> CHAR_ESCAPES;
   static {
-    ESCAPES = new HashMap<>();
-    ESCAPES.put(new Integer(0x8), "\\b");   /* \u0008: backspace BS */
-    ESCAPES.put(new Integer(0x9), "\\t");   /* \u0009: horizontal tab HT */
-    ESCAPES.put(new Integer(0xA), "\\n");   /* \u000a: linefeed LF */
-    ESCAPES.put(new Integer(0xC), "\\f");   /* \u000c: form feed FF */
-    ESCAPES.put(new Integer(0xD), "\\r");   /* \u000d: carriage return CR */
-    ESCAPES.put(new Integer(0x22), "\\\""); /* \u0022: double quote " */
-    ESCAPES.put(new Integer(0x27), "\\\'"); /* \u0027: single quote ' */
-    ESCAPES.put(new Integer(0x5C), "\\\\"); /* \u005c: backslash \ */
+    CHAR_ESCAPES = new HashMap<>();
+    CHAR_ESCAPES.put(0x8, "\\b");   /* \u0008: backspace BS */
+    CHAR_ESCAPES.put(0x9, "\\t");   /* \u0009: horizontal tab HT */
+    CHAR_ESCAPES.put(0xA, "\\n");   /* \u000a: linefeed LF */
+    CHAR_ESCAPES.put(0xC, "\\f");   /* \u000c: form feed FF */
+    CHAR_ESCAPES.put(0xD, "\\r");   /* \u000d: carriage return CR */
+    //CHAR_ESCAPES.put(0x22, "\\\""); /* \u0022: double quote " */
+    CHAR_ESCAPES.put(0x27, "\\\'"); /* \u0027: single quote ' */
+    CHAR_ESCAPES.put(0x5C, "\\\\"); /* \u005c: backslash \ */
   }
 
   private VarType constType;
@@ -51,7 +51,7 @@ public class ConstExprent extends Exprent {
   private final boolean boolPermitted;
 
   public ConstExprent(int val, boolean boolPermitted, Set<Integer> bytecodeOffsets) {
-    this(guessType(val, boolPermitted), new Integer(val), boolPermitted, bytecodeOffsets);
+    this(guessType(val, boolPermitted), Integer.valueOf(val), boolPermitted, bytecodeOffsets);
   }
 
   public ConstExprent(VarType constType, Object value, Set<Integer> bytecodeOffsets) {
@@ -130,17 +130,17 @@ public class ConstExprent extends Exprent {
 
       case CodeConstants.TYPE_CHAR:
         Integer val = (Integer)value;
-        String ret = ESCAPES.get(val);
+        String ret = CHAR_ESCAPES.get(val);
         if (ret == null) {
           char c = (char)val.intValue();
-          if (c >= 32 && c < 127 || !ascii && TextUtil.isPrintableUnicode(c)) {
+          if (isPrintableAscii(c) || !ascii && TextUtil.isPrintableUnicode(c)) {
             ret = String.valueOf(c);
           }
           else {
             ret = TextUtil.charToUnicodeLiteral(c);
           }
         }
-        return new TextBuffer().append('\'').append(ret).append('\'');
+        return new TextBuffer(ret).enclose("'", "'");
 
       case CodeConstants.TYPE_BYTE:
       case CodeConstants.TYPE_BYTECHAR:
@@ -235,7 +235,7 @@ public class ConstExprent extends Exprent {
 
       case CodeConstants.TYPE_OBJECT:
         if (constType.equals(VarType.VARTYPE_STRING)) {
-          return new TextBuffer().append('"').append(convertStringToJava(value.toString(), ascii)).append('"');
+          return new TextBuffer(convertStringToJava(value.toString(), ascii)).enclose("\"", "\"");
         }
         else if (constType.equals(VarType.VARTYPE_CLASS)) {
           String stringVal = value.toString();
@@ -274,11 +274,11 @@ public class ConstExprent extends Exprent {
         case 0x22: //"\\\\\""); // u0022: double quote "
           buffer.append("\\\"");
           break;
-        case 0x27: //"\\\\'");  // u0027: single quote '
-          buffer.append("\\\'");
-          break;
+        //case 0x27: //"\\\\'");  // u0027: single quote '
+        //  buffer.append("\\\'");
+        //  break;
         default:
-          if (c >= 32 && c < 127 || !ascii && TextUtil.isPrintableUnicode(c)) {
+          if (isPrintableAscii(c) || !ascii && TextUtil.isPrintableUnicode(c)) {
             buffer.append(c);
           }
           else {
@@ -298,6 +298,13 @@ public class ConstExprent extends Exprent {
     ConstExprent cn = (ConstExprent)o;
     return InterpreterUtil.equalObjects(constType, cn.getConstType()) &&
            InterpreterUtil.equalObjects(value, cn.getValue());
+  }
+
+  @Override
+  public int hashCode() {
+    int result = constType != null ? constType.hashCode() : 0;
+    result = 31 * result + (value != null ? value.hashCode() : 0);
+    return result;
   }
 
   public boolean hasBooleanValue() {
@@ -340,13 +347,13 @@ public class ConstExprent extends Exprent {
   public static ConstExprent getZeroConstant(int type) {
     switch (type) {
       case CodeConstants.TYPE_INT:
-        return new ConstExprent(VarType.VARTYPE_INT, new Integer(0), null);
+        return new ConstExprent(VarType.VARTYPE_INT, Integer.valueOf(0), null);
       case CodeConstants.TYPE_LONG:
-        return new ConstExprent(VarType.VARTYPE_LONG, new Long(0), null);
+        return new ConstExprent(VarType.VARTYPE_LONG, Long.valueOf(0), null);
       case CodeConstants.TYPE_DOUBLE:
-        return new ConstExprent(VarType.VARTYPE_DOUBLE, new Double(0), null);
+        return new ConstExprent(VarType.VARTYPE_DOUBLE, Double.valueOf(0), null);
       case CodeConstants.TYPE_FLOAT:
-        return new ConstExprent(VarType.VARTYPE_FLOAT, new Float(0), null);
+        return new ConstExprent(VarType.VARTYPE_FLOAT, Float.valueOf(0), null);
     }
 
     throw new RuntimeException("Invalid argument: " + type);
@@ -359,6 +366,27 @@ public class ConstExprent extends Exprent {
   public void setConstType(VarType constType) {
     this.constType = constType;
   }
+
+  public void adjustConstType(VarType expectedType) {
+    // BYTECHAR and SHORTCHAR => CHAR in the CHAR context
+    if ((expectedType.equals(VarType.VARTYPE_CHAR) || expectedType.equals(VarType.VARTYPE_CHARACTER)) &&
+            (constType.equals(VarType.VARTYPE_BYTECHAR) || constType.equals(VarType.VARTYPE_SHORTCHAR))) {
+      int intValue = getIntValue();
+      if (isPrintableAscii(intValue) || CHAR_ESCAPES.containsKey(intValue)) {
+        setConstType(VarType.VARTYPE_CHAR);
+      }
+    }
+    // BYTE, BYTECHAR, SHORTCHAR, SHORT, CHAR => INT in the INT context
+    else if ((expectedType.equals(VarType.VARTYPE_INT) || expectedType.equals(VarType.VARTYPE_INTEGER)) &&
+            constType.typeFamily == CodeConstants.TYPE_FAMILY_INTEGER) {
+      setConstType(VarType.VARTYPE_INT);
+    }
+  }
+
+  private static boolean isPrintableAscii(int c) {
+    return c >= 32 && c < 127;
+  }
+
 
   public Object getValue() {
     return value;
